# dead-pixel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_linux.sh  build_macOs.sh  build_web.sh  map.aseprite  notes.txt  run  todo.txt
assets/shaders330/: blur.fs
include/: boids.h  level.h  player.h  settings.h
map_creation/: README.md  export.py  map.aseprite  map.txt
src/: boids.c  boids.h  level.c  level.h  main.c  player.c  player.h  settings.h
src/resources/: level.txt  map.txt
src/resources/shaders100/: blur.fs  glitch.fs  scanlines.fs
src/resources/shaders330/: blur.fs  glitch.fs  scanlines.fs
